<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">超级图片</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="reco_error">没有发现隐含信息</string>
    <string name="icard_net_error">未检测到网络</string>
    <string name="version_title">版权</string>
    <string name="link_title">链接</string>
    <string name="text_title">文本</string>
    <string name="map_title">地图</string>
    <string name="video_title">视频</string>
    <string name="pic_title">图片</string>
    <string name="person_title">人物</string>
    <string name="imagedesc_default">图片默认描述文字</string>
    <string name="text_default">文本默认描述文字</string>
    <string name="his_title">扫描记录</string>
    <string name="icard_findsms_title">请设置独立密码,你可以用手机号+独立密码登录\\n账号:+86</string>
    <string name="icard_register_mobile_finish">完成</string>
    <string name="icard_register_mobile_pwd">填写您的注册信息\\n+86</string>
    <string name="icard_login_no">注册</string>
    <string name="icard_login_password_error">请输入密码</string>
    <string name="icard_register_mobile_reinput">验证码不正确,请重新输入</string>
    <string name="icard_register_mobile_sure">确定</string>
    <string name="icard_register_mobile_time1">接收短信大约需要</string>
    <string name="icard_register_mobile_time2">秒</string>
    <string name="icard_register_mobile_resend">重新发送验证码</string>
    <string name="icard_register_mobile_notice">我们已发送验证码短信到这个号码 \\n+86</string>
    <string name="icard_register_mobile_yanchi">验证码短信可能略有延迟，确定返回并重新开始？</string>
    <string name="icard_register_mobile_wait">等待</string>
    <string name="cannel">取消</string>
    <string name="icard_register_mobile_sms">请输入验证码</string>
    <string name="icard_register_mobile_already">此用户已存在</string>
    <string name="icard_register_mail">邮箱</string>
    <string name="icard_login_password">密码</string>
    <string name="icard_register_repassword_hint">确认密码</string>
    <string name="icard_login_desc1">登录超级图片账号表示您同意</string>
    <string name="card_login_desc2">超级图片协议</string>
    <string name="icard_register_login">已有账号登录</string>
    <string name="icard_login_other">使用合作账号登录</string>
    <string name="icard_register_mobile_input">请输入您的手机号码进行注册</string>
    <string name="icard_register_mobile_next">下一步</string>
    <string name="icard_register_mobile">手机号</string>
    <string name="icard_login_mail_error">请输入登录邮箱或用户名</string>
    <string name="icard_register_desc1">注册则表明已经阅读并同意</string>
    <string name="icard_register_desc2">超级图片软件服务协议</string>
    <string name="icard_register_reset">请输入您的手机号找回密码</string>
    <string name="icard_register_mobile_shuru">请输入手机号码</string>
    <string name="icard_register_mobile_error">手机号码错误</string>
    <string name="icard_register_mobile_error_wuxiao">你输入的是一个无效的手机号码</string>
    <string name="icard_register_sure_mobile">确认手机号码</string>
    <string name="icard_register_sure_send">我们将发送验证码短信到这个号码:+86</string>
    <string name="design_headimage_quit">取消</string>
    <string name="icard_register_sure_OK">好</string>
    <string name="icard_login_register_mobile">手机号注册</string>
    <string name="icard_login_register_mail">邮箱注册</string>
    <string name="register_success">注册成功</string>
    <string name="icard_register_user_error_hint">请输入用户名</string>
    <string name="icard_register_mail_error_hint">请输入正确的邮箱地址</string>
    <string name="tabPic">tab按钮</string>
    <string name="my_info_mail_exp">未绑定</string>
    <string name="save">保存到手机</string>
    <string name="icard_order_address">收货地址</string>
    <string name="icard_order_address_man">收   货   人</string>
    <string name="icard_order_address_zone">选择地区</string>
    <string name="set_fail">设置失败</string>
    <string name="cancel">退出</string>
    <string name="my_info">个人信息</string>
    <string name="my_info_headimage">头像</string>
    <string name="my_info_username">用户名</string>
    <string name="my_info_username_exp">未填写</string>
    <string name="my_info_signature">超级图片,重构图片世界</string>
    <string name="my_info_mail">未绑定</string>
    <string name="my_info_mobile">手机号</string>
    <string name="my_info_qq">QQ/微博账号</string>
    <string name="icard_my_version">我的标记</string>
    <string name="design_tag_title_exp">默认用户名</string>
    <string name="check_version">检测是否有新版本</string>
    <string name="my_info_set">设置</string>
    <string name="signature">个性签名</string>
    <string name="save_success">保存成功</string>
    <string name="add_version">添加版权</string>
    <string name="add_link">添加链接</string>
    <string name="add_text">添加文字</string>
    <string name="add_map">添加位置</string>
    <string name="add_video">添加视频</string>
    <string name="add_pic">添加图片</string>
    <string name="add_person">添加人物</string>
    <string name="design_tag_type_exp">名片</string>
    <string name="icard_select_tag_set">设置默认</string>
    <string name="icard_chaojitupian_delete_success">删除成功</string>
    <string name="set_success">设置成功</string>
    <string name="save_fail">保存失败</string>
    <string name="edit_success">修改成功</string>
    <string name="edit_fail">修改失败</string>
    <string name="icard_tag_card_set">添加版权</string>
    <string name="icard_order_address_man_hint">名字(必填)</string>
    <string name="icard_tag_card_mobile_hint">手机号码(必填)</string>
    <string name="icard_tag_card_mail_hint">电子邮箱地址</string>
    <string name="icard_tag_card_company_hint">公司名称</string>
    <string name="icard_tag_card_part_hint">部门名称</string>
    <string name="icard_tag_card_job_hint">职位名称</string>
    <string name="icard_tag_card_index_hint">官方网址</string>
    <string name="icard_tag_card_address_hint">公司地址</string>
    <string name="icard_tag_card_signature_hint">性别女,爱好男</string>
    <string name="icard_tag_card_weixin_hint">微信账号</string>
    <string name="icard_tag_card_preview">预览</string>
    <string name="person_new">新增人物</string>
    <string name="design_tag_link">链接</string>
    <string name="design_tag_title">我的名片</string>
    <string name="design_tag_desc">描述</string>
    <string name="icard_tag_video_link">视频链接</string>
    <string name="tag_info_url_error">请输入正确的链接地址</string>
    <string name="tag_info_url_null">链接不能为空</string>
    <string name="tag_info_video_error">请选择视频，再保存</string>
    <string name="tag_info_map_error">请选择具体位置，再保存</string>
    <string name="tag_info_title_null">标题不能为空</string>
    <string name="icard_tag_info_person_hint">腾讯/新浪微博</string>
    <string name="icard_tag_info_desc_hint">详细描述</string>
    <string name="icard_tag_info_url_hint">链接地址</string>
    <string name="tag_info_title">标题</string>
    <string name="tag_info_map">请输入具体位置</string>
    <string name="tag_info_video">请输入视频信息</string>
    <string name="the_last_version">此版本是最新版本</string>
    <string name="icard_exit">再按一次退出程序</string>
    <string name="icard_version_name_null">姓名不能为空</string>
    <string name="icard_version_mobile_null">手机号码不能为空</string>
    <string name="icard_version_mobile_error">请输入正确的手机号码</string>
    <string name="icard_version_mail_error">请输入正确的邮箱地址</string>
    <string name="icard_version_website_error">请输入正确的网址</string>
    <string name="version_new">新增版权</string>
    <string name="my_set_suggest_success">反馈成功</string>
    <string name="my_set_suggest_fail">反馈失败</string>
    <string name="icard_send">发送</string>
    <string name="my_info_about_suggest">意见反馈</string>
    <string name="my_info_about_suggest_content">输入反馈内容</string>
    <string name="icard_my_mail">您的邮箱</string>
    <string name="icard_my_link">选填,方便我们和您联系</string>
    <string name="my_set_suggest_null">反馈内容不能为空</string>
    <string name="my_info_about_help">帮助</string>
    <string name="my_info_about_help_1">1.什么是超级图片？</string>
    <string name="my_info_about_help_11">在普通图片中嵌入版权、文字、链接、位置信息、声音、视频、图片等隐藏信息，将普通图片创造为超级图片。超级图片被转发到任何地方，被裁剪、PS、截屏，隐藏信息将与图片一起流转不丢失。</string>
    <string name="my_info_about_help_2">2.如何识别超级图片？</string>
    <string name="my_info_about_help_22">扫描识别，将摄像头平行对着含有超级图片标识的图片、印刷品等即可识别隐藏信息。光线较暗时，打开闪光灯能更容易识别。\\n手机相册图片识别，从手机相册选择含有超级图片标识的图片，即可识别出超级图片。</string>
    <string name="my_info_about_help_3">3.超级图片制作完成并保存到手机相册，识别为什么不能查看隐藏信息？</string>
    <string name="my_info_about_help_33">[超级图片]应用制作的的超级图片，旨在发布分享至社交平台进行信息交互传播。区分于官方支持扫描识别的其他超级图片。</string>
    <string name="my_info_about">关于</string>
    <string name="my_info_about_us_version">版本号:V1.0</string>
    <string name="my_info_about_us_company">北京中盈信安科技发展有限责任公司  版权所有</string>
    <string name="my_info_about_us_weibo">官方微博: http://weibo.com/chaojitupian</string>
    <string name="my_info_about_us_mail">商务邮箱: marketing@ichaotu.com</string>
    <string name="my_info_about_us_website">公司网站: www.ichaotu.com</string>
    <string name="my_info_about_us_mobile">联系电话: 86-010-51799198</string>
    <string name="icard_tag_video">视频</string>
    <string name="design_tag_search_bt">搜索</string>
    <string name="tag_info_video_hint">只支持优酷视频</string>
    <string name="design_tag_video_item_text">搜索的结果信息</string>
    <string name="signature_input">输入个性签名,30字内</string>
    <string name="color_text">文字颜色</string>
    <string name="design_select_tag_type">选择标记类型</string>
    <string name="my_info_sound">声音</string>
    <string name="my_info_vibrate">震动</string>
    <string name="my">使用帮助</string>
    <string name="my_info_exit">退出登录</string>
    <string name="map_new">新增位置</string>
    <string name="video_new">新增视频</string>
    <string name="text_new">新增文字</string>
    <string name="pic_new">新增图片</string>
    <string name="link_new">新增链接</string>
    <string name="title_activity_fast_login">FastLoginActivity</string>
    <string name="alumb">相册</string>
    <string name="title_activity_collapse">CollapseActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_his">无扫描记录</string>
    <string name="scan">扫一扫</string>
    <string name="scan_line">扫描线</string>
    <string name="即可识别嵌入的内容">即可识别嵌入的内容</string>
    <string name="aim_target">请将摄像头对准含有【超级图片】标识的图片</string>
    <string name="near_easy_scan">靠近一点更容易识别噢~</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
